--- a/HTML & CSS/Vera's Class/Portfolio/04 Portfolio/style.css
+++ b/HTML & CSS/Vera's Class/Portfolio/04 Portfolio/style.css
@@ -171,6 +171,7 @@ body {
   align-items: center;
   height: 100vh;
   background-color: #ccc;
+  overflow: hidden;
 }
 .hero__background {
   position: absolute;
@@ -225,6 +226,19 @@ body {
 }
 .card__img {
   border-radius: 8px;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.card__img-container {
+  position: relative;
+}
+.card__img-container::after {
+  content: "";
+  display: block;
+  padding-bottom: 100%;
 }
 .card__main {
   display: flex;
@@ -426,7 +440,20 @@ body {
     grid-area: 2/1/span 1/span 2;
   }
   .card__img {
-    height: 328px;
+    border-radius: 8px;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  .card__img-container {
+    position: relative;
+  }
+  .card__img-container::after {
+    content: "";
+    display: block;
+    padding-bottom: 50%;
   }
   .about,
 .skills {
