--- a/HTML & CSS/Vera's Class/Portfolio/04 Portfolio/style.css
+++ b/HTML & CSS/Vera's Class/Portfolio/04 Portfolio/style.css
@@ -158,10 +158,42 @@ body {
        column-gap: 8px;
   color: var(--white);
 }
+.navbar__links-mobile {
+  display: none;
+  position: absolute;
+  top: -100vh;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: calc(100vh - 80px);
+  background-color: #fff;
+  padding: 24px 0;
+}
+.navbar__links-mobile--open {
+  display: block;
+  position: absolute;
+  top: 80px;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: calc(100vh - 80px);
+  background-color: #fff;
+  padding: 24px 0;
+}
 .navbar__link {
   font-size: var(--body-sm);
   font-weight: 600;
   padding: 4px 8px;
+}
+.navbar__link-mobile {
+  display: flex;
+  align-items: center;
+  height: 60px;
+  padding: 16px 40px;
+  font-size: var(--body-lg);
+  font-weight: 600;
+  line-height: 28px;
+  margin-bottom: 8px;
 }
 .navbar__hamburger-menu {
   display: none;
@@ -185,6 +217,7 @@ body {
   width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+  background-position: center left;
 }
 .hero__background-top {
   z-index: 1;
@@ -509,12 +542,35 @@ body {
     gap: 40px;
   }
 }
+@media only screen and (max-width: 640px) {
+  .hero__h1 {
+    font-size: 65px;
+    line-height: 60px;
+    letter-spacing: -2.5%;
+  }
+}
+@media only screen and (max-width: 530px) {
+  .hero__h1 {
+    font-size: 57px;
+    line-height: 45px;
+    letter-spacing: -2.5%;
+  }
+}
 @media only screen and (max-width: 375px) {
+  .navbar__link-mobile {
+    display: flex;
+    align-items: center;
+    height: 48px;
+    padding: 12px 20px;
+    font-size: var(--body-md);
+    font-weight: 600;
+    line-height: 24px;
+  }
   .hero {
     padding: 0 20px;
   }
   .hero__h1 {
-    font-size: 57px;
+    font-size: 50px;
     line-height: 45px;
     letter-spacing: -2.5%;
   }
