--- a/HTML & CSS/Vera's Class/Portfolio/04 Portfolio/style.scss
+++ b/HTML & CSS/Vera's Class/Portfolio/04 Portfolio/style.scss
@@ -176,6 +176,14 @@ body {
     font-size: var(--body-sm);
     font-weight: 600;
     padding: 4px 8px;
+    &:hover {
+      opacity: 0.94;
+      text-decoration: underline;
+    }
+    &:active {
+      opacity: 0.88;
+      text-decoration: underline;
+    }
 
     &-mobile {
       display: flex;
@@ -210,7 +218,6 @@ body {
     height: 100vh;
     width: 100%;
     object-fit: cover;
-    background-position: center left;
     &-top {
       z-index: 1;
     }
@@ -393,6 +400,12 @@ body {
     justify-content: center;
     border-radius: 100%;
     background-color: #2e2e2e;
+    &:hover {
+      opacity: 0.96;
+    }
+    &:active {
+      opacity: 0.92;
+    }
   }
   &__socials {
     display: flex;
@@ -434,6 +447,12 @@ body {
     background-color: var(--bg-black);
     width: fit-content;
     color: (var(--white));
+    &:hover {
+      opacity: 0.96;
+    }
+    &:active {
+      opacity: 0.92;
+    }
   }
 }
 
@@ -641,8 +660,10 @@ body {
     }
   }
   .footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     padding: 0 20px;
-    text-align: center;
   }
   .form {
     padding: 24px;
