--- a/JavaScript/Margit's Class/Tasks/Week_34/Pizza_order/style.scss
+++ b/JavaScript/Margit's Class/Tasks/Week_34/Pizza_order/style.scss
@@ -37,11 +37,11 @@ label {
   line-height: 20px;
 }
 
-#name,
-#form__radio-wrapper,
-#toppings-pepperoni,
-#delivery {
-  margin-top: 4px;
+.subtitle {
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 24px;
+  margin-bottom: 4px;
 }
 
 .divider {
@@ -53,8 +53,7 @@ label {
   max-width: 1216px;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  row-gap: 48px;
-  column-gap: 32px;
+  gap: 32px;
   margin: 0 32px;
   padding: 80px 0;
 }
@@ -71,6 +70,7 @@ label {
 
 .form {
   grid-column: span 8;
+  grid-row: span 4;
   display: flex;
   flex-direction: column;
   row-gap: 24px;
@@ -98,12 +98,24 @@ label {
   }
 }
 
+.image {
+  grid-column: span 4;
+  grid-row: span 2;
+  background-image: url(/assets/pizza.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 .output {
   display: flex;
   flex-direction: column;
   gap: 14px;
   grid-column: span 4;
+  grid-row: span 2;
   height: fit-content;
+  &__toppings {
+    word-wrap: normal;
+  }
   &__wrapper {
     display: flex;
     flex-direction: row;
