--- a/JavaScript/Margit's Class/Tasks/Week_35/Healthcare/style.scss
+++ b/JavaScript/Margit's Class/Tasks/Week_35/Healthcare/style.scss
@@ -1,5 +1,8 @@
 * {
   margin: 0;
+  padding: 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 body {
@@ -129,6 +132,12 @@ body {
   border: none;
   border-radius: 20px;
   padding: 10px 24px;
+  &:hover {
+    opacity: 0.92;
+  }
+  &:active {
+    opacity: 0.84;
+  }
 }
 
 .wrapper {
