--- a/HTML & CSS/Vera's Class/Portfolio/06 Portfolio/style.css
+++ b/HTML & CSS/Vera's Class/Portfolio/06 Portfolio/style.css
@@ -195,6 +195,7 @@ body {
   padding: 24px 0;
 }
 .navbar__links-mobile--open {
+  background-color: var(--bg-black);
   display: block;
   position: absolute;
   top: 80px;
@@ -568,13 +569,31 @@ body {
   height: 68px;
   background-color: var(--bg-black);
   color: #d1d5db;
-  display: flex;
+}
+.footer__wrapper {
+  margin: 0 auto;
+  width: 100%;
+  height: 100%;
+  max-width: 1216px;
+  display: grid;
+  grid-template-areas: ". p a";
+  grid-template-columns: 1fr 2fr 1fr;
   align-items: center;
-  justify-content: center;
+}
+.footer__p {
+  grid-area: p;
+  text-align: center;
+}
+.footer__a {
+  grid-area: a;
+  text-align: end;
 }
 
 /* Media Breakpoints */
 @media only screen and (max-width: 768px) {
+  .navbar__container {
+    align-items: center;
+  }
   .navbar__links {
     display: none;
   }
@@ -652,6 +671,36 @@ body {
   }
   .contact__wrapper-left {
     gap: 40px;
+  }
+  .footer {
+    padding: 24px 0;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+  }
+  .footer__wrapper {
+    grid-template-areas: "a" "divider" "p";
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    gap: 24px;
+    padding: 0 40px;
+  }
+  .footer__p {
+    grid-area: p;
+    text-align: center;
+  }
+  .footer__a {
+    grid-area: a;
+    margin: 0 0 0 auto;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+  }
+  .footer__divider {
+    grid-area: divider;
+    height: 1px;
+    background-color: #fff;
+    opacity: 0.2;
   }
 }
 @media only screen and (max-width: 640px) {
@@ -748,7 +797,10 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 0 20px;
+    padding: 24 20px;
+  }
+  .footer__wrapper {
+    padding: 0 16px;
   }
   .form {
     padding: 24px;
