--- a/HTML & CSS/Vera's Class/Portfolio/06 Portfolio/style.scss
+++ b/HTML & CSS/Vera's Class/Portfolio/06 Portfolio/style.scss
@@ -187,6 +187,7 @@ body {
       height: calc(100vh - 80px);
       padding: 24px 0;
       &--open {
+        background-color: var(--bg-black);
         display: block;
         position: absolute;
         top: 80px;
@@ -566,7 +567,6 @@ body {
 }
 
 /* Footer */
-
 .footer {
   padding: 0 40px;
   font-size: var(--body-sm);
@@ -575,15 +575,34 @@ body {
   height: 68px;
   background-color: var(--bg-black);
   color: #d1d5db;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  &__wrapper {
+    margin: 0 auto;
+    width: 100%;
+    height: 100%;
+    max-width: 1216px;
+    display: grid;
+    grid-template-areas: ". p a";
+    grid-template-columns: 1fr 2fr 1fr;
+    align-items: center;
+  }
+
+  &__p {
+    grid-area: p;
+    text-align: center;
+  }
+  &__a {
+    grid-area: a;
+    text-align: end;
+  }
 }
 
 /* Media Breakpoints */
 
 @media only screen and (max-width: 768px) {
   .navbar {
+    &__container {
+      align-items: center;
+    }
     &__links {
       display: none;
     }
@@ -672,6 +691,35 @@ body {
     }
     &__wrapper-left {
       gap: 40px;
+    }
+  }
+  .footer {
+    padding: 24px 0;
+    height: fit-content;
+    &__wrapper {
+      grid-template-areas:
+        "a"
+        "divider"
+        "p";
+      grid-template-columns: 1fr;
+      grid-template-rows: auto;
+      gap: 24px;
+      padding: 0 40px;
+    }
+    &__p {
+      grid-area: p;
+      text-align: center;
+    }
+    &__a {
+      grid-area: a;
+      margin: 0 0 0 auto;
+      width: fit-content;
+    }
+    &__divider {
+      grid-area: divider;
+      height: 1px;
+      background-color: #fff;
+      opacity: 0.2;
     }
   }
 }
@@ -783,7 +831,10 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 0 20px;
+    padding: 24 20px;
+    &__wrapper {
+      padding: 0 16px;
+    }
   }
   .form {
     padding: 24px;
