--- a/JavaScript/Margit's Class/Tasks/Week_35/Healthcare/style.scss
+++ b/JavaScript/Margit's Class/Tasks/Week_35/Healthcare/style.scss
@@ -123,6 +123,12 @@ body {
   }
 }
 
+.output {
+  &__span {
+    font-weight: 700;
+  }
+}
+
 #button {
   font-family: sans-serif;
   font-size: 16px;
@@ -138,6 +144,10 @@ body {
   &:active {
     opacity: 0.84;
   }
+}
+
+#output-container {
+  display: none;
 }
 
 .wrapper {
