--- a/JavaScript/Margit's Class/Tasks/Week_36/Car_Database/style.css
+++ b/JavaScript/Margit's Class/Tasks/Week_36/Car_Database/style.css
@@ -139,7 +139,7 @@ h6 {
   display: grid;
   width: 100%;
   grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: 60px 60px;
+  grid-auto-rows: 60px;
   gap: 1px;
   background-color: #bab298;
   border: 1px #bab298 solid;
