--- a/JavaScript/Margit's Class/Tasks/Week_36/Car_Database/style.scss
+++ b/JavaScript/Margit's Class/Tasks/Week_36/Car_Database/style.scss
@@ -176,7 +176,7 @@ $color--yellow-100: #fff4cc;
   display: grid;
   width: 100%;
   grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: 60px 60px;
+  grid-auto-rows: 60px;
   gap: 1px;
   background-color: $color--raster;
   border: 1px $color--raster solid;
