--- a/HTML & CSS/Vera's Class/Portfolio/06 Portfolio/style.css
+++ b/HTML & CSS/Vera's Class/Portfolio/06 Portfolio/style.css
@@ -2,7 +2,7 @@
     The new CSS reset - version 1.7.3 (last updated 7.8.2022)
     GitHub page: https://github.com/elad2412/the-new-css-reset
 ***/
-/*
+/* 
     Remove all the styles of the "User-Agent-Stylesheet", except for the 'display' property
     - The "symbol *" part is to solve Firefox SVG sprite bug
  */
@@ -128,6 +128,11 @@ body {
   position: relative;
 }
 
+.scroll--disable {
+  height: 100%;
+  overflow: hidden;
+}
+
 .section {
   margin: 0 auto;
   max-width: 1216px;
@@ -222,11 +227,15 @@ body {
   display: flex;
   align-items: center;
   height: 60px;
-  padding: 16px 40px;
   font-size: var(--body-lg);
   font-weight: 600;
   line-height: 28px;
   margin-bottom: 8px;
+}
+.navbar__link-mobile a {
+  height: 100%;
+  width: 100%;
+  padding: 16px 40px;
 }
 .navbar__hamburger-menu {
   display: none;
@@ -560,6 +569,23 @@ body {
   opacity: 0.92;
 }
 
+.to-top {
+  height: 48px;
+  width: 48px;
+  display: none;
+  position: fixed;
+  bottom: 80px;
+  right: 45px;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  background-color: #111111;
+  border-radius: 100%;
+}
+.to-top--visible {
+  display: block;
+}
+
 /* Footer */
 .footer {
   padding: 0 40px;
@@ -569,24 +595,13 @@ body {
   height: 68px;
   background-color: var(--bg-black);
   color: #d1d5db;
-}
-.footer__wrapper {
-  margin: 0 auto;
-  width: 100%;
-  height: 100%;
-  max-width: 1216px;
-  display: grid;
-  grid-template-areas: ". p a";
-  grid-template-columns: 1fr 2fr 1fr;
+  display: flex;
   align-items: center;
+  justify-content: center;
 }
 .footer__p {
   grid-area: p;
   text-align: center;
-}
-.footer__a {
-  grid-area: a;
-  text-align: end;
 }
 
 /* Media Breakpoints */
@@ -678,29 +693,9 @@ body {
     height: -moz-fit-content;
     height: fit-content;
   }
-  .footer__wrapper {
-    grid-template-areas: "a" "divider" "p";
-    grid-template-columns: 1fr;
-    grid-template-rows: auto;
-    gap: 24px;
-    padding: 0 40px;
-  }
   .footer__p {
     grid-area: p;
     text-align: center;
-  }
-  .footer__a {
-    grid-area: a;
-    margin: 0 0 0 auto;
-    width: -webkit-fit-content;
-    width: -moz-fit-content;
-    width: fit-content;
-  }
-  .footer__divider {
-    grid-area: divider;
-    height: 1px;
-    background-color: #fff;
-    opacity: 0.2;
   }
 }
 @media only screen and (max-width: 640px) {
@@ -736,9 +731,7 @@ body {
     letter-spacing: -2.5%;
   }
   .projects {
-    padding: 0 20px;
-    margin-top: 48px;
-    margin-bottom: 48px;
+    padding: 48px 20px;
   }
   .projects__wrapper {
     display: flex;
@@ -793,6 +786,21 @@ body {
   .contact__wrapper-left {
     gap: 32px;
   }
+  .form {
+    padding: 24px;
+  }
+  .to-top {
+    display: none;
+    position: fixed;
+    bottom: 50px;
+    right: 25px;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+  }
+  .to-top--visible {
+    display: block;
+  }
   .footer {
     display: flex;
     align-items: center;
@@ -801,8 +809,5 @@ body {
   }
   .footer__wrapper {
     padding: 0 16px;
-  }
-  .form {
-    padding: 24px;
   }
 }/*# sourceMappingURL=style.css.map */
