--- a/JavaScript/Margit's Class/Tasks/Week_36/Gradient_Generator/style.scss
+++ b/JavaScript/Margit's Class/Tasks/Week_36/Gradient_Generator/style.scss
@@ -1,5 +1,7 @@
 * {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 html,
@@ -78,19 +80,26 @@ $color--white: #ffffff;
     inset 5px 5px 13px rgba(230, 230, 230, 0.9);
 }
 
+input[type="radio"]:checked {
+  @include shadow--active;
+}
+
 .main {
   padding: 48px;
   display: grid;
   gap: 48px;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, 1fr);
   align-items: center;
   justify-content: center;
 }
 
+.rotate {
+  transform: rotate(-45deg);
+}
+
 .gradient {
   height: 100%;
-  background: lightcoral;
+
   @include shadow;
   border-radius: 50px;
 }
@@ -155,6 +164,9 @@ $color--white: #ffffff;
   }
   &__direction {
     @include shadow;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 56px;
     height: 56px;
     border-radius: 16px;
@@ -163,6 +175,9 @@ $color--white: #ffffff;
     }
     &:active {
       @include shadow--active;
+    }
+    & label {
+      cursor: pointer;
     }
   }
   &__input {
@@ -185,6 +200,6 @@ input[type="color"]::-webkit-color-swatch {
   background-color: transparent;
 }
 
-.material-symbols-outlined {
+.fa-solid {
   padding: 16px;
 }
